[package]
name = "ffmpeg-swresample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1"
ffmpeg = { package = "ffmpeg-next", version = "7.1.0" }
interprocess = "2.2.2"
